force-app/main/default/objects/OrderItem/fields/Status_BI__c.field-meta.xml
<CustomField>
    <fullName>Status_BI__c</fullName>
    <formula>IF(TEXT(Order.Entrega_parcial__c) == &apos;Não Autorizada&apos;,
IF(
Order.Quantidade_Ag_Compra__c &gt; 0, &apos;Aguardando Compra Fornecedor&apos;,
IF(Order.Quantidade_Ag_Entrega__c &gt; 0, &apos;Aguardando Entrega Fornecedor&apos;,
TEXT(Status__c))),
TEXT(Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status BI</label>
    <type>Text</type>
</CustomField>