force-app/main/default/objects/OrderItem/fields/Tempo_em_Aberto__c.field-meta.xml
<CustomField>
    <fullName>Tempo_em_Aberto__c</fullName>
    <formula>IF( AND(TEXT(Status__c) != &quot;Entregue Cliente&quot;, TEXT(Status__c) != &quot;Atendido&quot;, TEXT(Status__c) != &quot;Cancelado&quot;, TEXT(Status__c) != &quot;Faturado&quot;, !ISNULL(DATEVALUE(Order.InicioAgAprovComercial__c))) , 
TODAY() - DATEVALUE(Order.InicioAgAprovComercial__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo em Aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>