force-app/main/default/objects/OrderItem/fields/Total_acumulado__c.field-meta.xml
<CustomField>
    <fullName>Total_acumulado__c</fullName>
    <label>_Total acumulado (del)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>