force-app/main/default/objects/OrderItem/fields/Ultima_Atualiza_o_Status__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Atualiza_o_Status__c</fullName>
    <label>Ultima Atualização Status</label>
    <type>DateTime</type>
</CustomField>