force-app/main/default/objects/OrderItem/fields/Valor_cadastrado__c.field-meta.xml
<CustomField>
    <fullName>Valor_cadastrado__c</fullName>
    <formula>Product2.Valor_de_Venda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor cadastrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>