force-app/main/default/objects/OrderItem/fields/Valor_de_tabela_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_tabela_total__c</fullName>
    <formula>ListPrice *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de tabela total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>