force-app/main/default/objects/OrderItem/fields/Verificar_Arrendondamento__c.field-meta.xml
<CustomField>
    <fullName>Verificar_Arrendondamento__c</fullName>
    <formula>ROUND(UnitPrice, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verificar Arrendondamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>