force-app/main/default/objects/OrderItem/fields/Veterinario__c.field-meta.xml
<CustomField>
    <fullName>Veterinario__c</fullName>
    <label>Veterinario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>