force-app/main/default/objects/OrderItem/validationRules/com_serial_sem_demo.validationRule-meta.xml
<ValidationRule>
    <fullName>com_serial_sem_demo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
     Description != null,
      AND(
       TEXT(Order.Natureza_de_Opera_o__c) != &apos;DEMONSTRAÇÃO&apos;,
       TEXT(Order.Natureza_de_Opera_o__c) != &apos;REMESSA DE COMODATO&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Produto de pedido que não é de demonstração, não dever possuir número de série.</errorMessage>
</ValidationRule>