force-app/main/default/objects/OrderItem/validationRules/Compras_Status_de_compras.validationRule-meta.xml
<ValidationRule>
    <fullName>Compras_Status_de_compras</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  
  !$User.Ignorar_erros__c,
  Acao_interna__c == false,
  ISCHANGED(Status__c),
  BEGINS(TEXT(PRIORVALUE(Status__c)), &apos;CMP - &apos;)
  
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status vinculados ao processo de compra (CMP) não podem ser alterados manualmente.</errorMessage>
</ValidationRule>