force-app/main/default/objects/OrderItem/validationRules/Elegivel_para_demo_rapida.validationRule-meta.xml
<ValidationRule>
    <fullName>Elegivel_para_demo_rapida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Order.RecordType.DeveloperName  == &apos;Demonstra_o_R_pida&apos;, !Product2.Elegivel_para_demo_rapida__c)</errorConditionFormula>
    <errorMessage>Esse produto não é elegivel para demo rápida</errorMessage>
</ValidationRule>