force-app/main/default/objects/OrderItem/validationRules/Item_entregue.validationRule-meta.xml
<ValidationRule>
    <fullName>Item_entregue</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED(Status__c),
        ISCHANGED(Quantity)
    ),
    NOT($User.Ignorar_erros__c),
    TEXT(PRIORVALUE(Status__c)) = &apos;Entregue Cliente&apos;,
    $User.Id &lt;&gt; &apos;0056e00000CoF2L&apos;,
    NOT(
        OR(
            TEXT(Status__c) = &apos;Cancelado&apos;,
            TEXT(Status__c) = &apos;Devolvido&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>Item entregue não pode mais sofrer alterações.</errorMessage>
</ValidationRule>