force-app/main/default/objects/OrderItem/validationRules/Pedido_ja_aprovado.validationRule-meta.xml
<ValidationRule>
    <fullName>Pedido_ja_aprovado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Acao_interna__c == false,
!$User.Ignorar_erros__c,
$User.Id != &apos;0055A000008lqdW&apos;,
$User.Id != &apos;005U4000000c3Hp&apos;,
$User.Id != &apos;0056e00000CoF2L&apos;,
$User.Id != &apos;0056e00000CqjCK&apos;,
$User.Id != &apos;0056e00000Co1I0&apos;,
$User.Id != &apos;0056e00000Cr9bk&apos;,
$User.Id != &apos;0056e00000EJYMx&apos;,
 OR (
     TEXT(Order.Status) == &apos;Aprovado&apos;,
     TEXT(Order.Status) == &apos;Ativo&apos;,
     TEXT(Order.Status) == &apos;Em Andamento&apos;,
     TEXT(Order.Status) == &apos;Em calibração / Separação&apos;,
     TEXT(Order.Status) == &apos;Agendado&apos;,
     TEXT(Order.Status) == &apos;Em demonstração&apos;,
     TEXT(Order.Status) == &apos;Retorno da demo&apos;,
     TEXT(Order.Status) == &apos;Em Verificação Funcional&apos;,
     TEXT(Order.Status) == &apos;Finalizado&apos;,
     TEXT(Order.Status) == &apos;Entregue Parcial&apos;,
     TEXT(Order.Status) == &apos;Entregue Total&apos;,
     TEXT(Order.Status) == &apos;Atendido Total&apos;,
     TEXT(Order.Status) == &apos;Atendido Parcial&apos;
     )
)</errorConditionFormula>
    <errorMessage>Não é possível adicionar produtos em um pedido em aprovação ou já aprovado.</errorMessage>
</ValidationRule>