force-app/main/default/objects/OrderItem/validationRules/Preco_Unitario.validationRule-meta.xml
<ValidationRule>
    <fullName>Preco_Unitario</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    UnitPrice = 0,
    ISPICKVAL(Status__c, &quot;Cancelado&quot;) = false
)</errorConditionFormula>
    <errorDisplayField>UnitPrice</errorDisplayField>
    <errorMessage>O preço unitário não pode ser igual a R$0,00.</errorMessage>
</ValidationRule>