force-app/main/default/objects/OrderItem/validationRules/Qtd_vinculada_comodato.validationRule-meta.xml
<ValidationRule>
    <fullName>Qtd_vinculada_comodato</fullName>
    <active>true</active>
    <errorConditionFormula>Quantidade_vinculada_comodato__c &gt; Quantity</errorConditionFormula>
    <errorMessage>Quantidade vinculada ultrapassa o total vendido.</errorMessage>
</ValidationRule>