force-app/main/default/objects/OrderItem/validationRules/sem_serial_com_demo.validationRule-meta.xml
<ValidationRule>
    <fullName>sem_serial_com_demo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
     Description == null,
     TEXT(Order.Natureza_de_Opera_o__c) == &apos;Demonstração&apos;
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Produto de pedido de demonstração dever possuir número de série.</errorMessage>
</ValidationRule>