force-app/main/default/objects/OrderItem/validationRules/Status_AT.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_AT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Order.Natureza_de_Opera_o__c) != &apos;BONIFICAÇÃO&apos;,
TEXT(Product2.Tipo_do_Produto__c) = &apos;PEÇA&apos;,
TEXT(Order.Departamento3__c) = &apos;Serviço&apos;,
ISCHANGED(Status__c),
TEXT(PRIORVALUE(Status__c)) != &apos;Recebido A.T.&apos;,
TEXT(PRIORVALUE(Status__c)) != &apos;Faturado&apos;,
TEXT(PRIORVALUE(Status__c)) != &apos;Atendido&apos;,
OR(
TEXT(Status__c) = &apos;Faturado&apos;,
TEXT(Status__c) = &apos;Entregue Cliente&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O item deve primeiro passar pelo status Recebido A.T.</errorMessage>
</ValidationRule>