force-app/main/default/objects/OrderItem/validationRules/Status_bloqueado_pt2.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_bloqueado_pt2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	ISCHANGED(Status__c),
	TEXT(Order.Status) == &apos;Cancelado&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Pedido cancelado por completo não retorna o status. Considere criar novo pedido.</errorMessage>
</ValidationRule>