force-app/main/default/objects/OrderItem/validationRules/Status_bloqueado_pt3.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_bloqueado_pt3</fullName>
    <active>false</active>
    <description>Filtro de status para itens de pedidos de representação</description>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	Order.RecordType.Name == &apos;Representação&apos;,
	AND(
		TEXT(Status__c) != &apos;Novo&apos;,
		TEXT(Status__c) != &apos;Entregue&apos;,
		TEXT(Status__c) != &apos;Cancelado&apos;
	)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status permitidos para produto de pedido de Representação: Novo, Entregue ou Cancelado.</errorMessage>
</ValidationRule>