force-app/main/default/objects/OrderItem/validationRules/Status_incompativel.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_incompativel</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
			AND(TEXT(Order.Natureza_de_Opera_o__c) != &apos;SERVIÇO&apos;,
			OR(
				TEXT(Status__c) == &apos;Aberto&apos;,
				TEXT(Status__c) == &apos;Atendido&apos;
			)
)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O Status deve ser compatível ao tipo de vínculo pai do pedido.</errorMessage>
</ValidationRule>