force-app/main/default/objects/OrderItem/validationRules/Status_novo.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_novo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
TEXT(Status__c) != &apos;Novo&apos;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O produto do pedido deve ser criado com status &quot;Novo&quot;.</errorMessage>
</ValidationRule>