force-app/main/default/objects/OrderItem/validationRules/TRANSFERENCIA_INTERN.validationRule-meta.xml
<ValidationRule>
    <fullName>TRANSFERENCIA_INTERN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Order.Natureza_de_Opera_o__c) != &apos;DEMONSTRAÇÃO&apos;,
TEXT(Order.Natureza_de_Opera_o__c) != &apos;REMESSA DE COMODATO&apos;,
TEXT(Status__c) = &apos;Transferência Interna&apos;
)</errorConditionFormula>
    <errorMessage>o Status &quot;Transferência Interna&quot; só pode ser inserido no tipo de registro &quot;Demonstração&quot;</errorMessage>
</ValidationRule>