force-app/main/default/objects/OrderItem/validationRules/Valida_rota_de_entrega.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_rota_de_entrega</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Em rota de entrega&quot;), Prazo_de_entrega__c = null)</errorConditionFormula>
    <errorMessage>O prazo de entrega do item deve ser preenchido para itens com o status EM ROTA DE ENTREGA.</errorMessage>
</ValidationRule>